Revert "Fixed the alignment issue while displaying cell in rendermime"
This reverts commit f49d6f4a0543d29e231b8996f4a9000bfc0cadc4.

--- a/packages/rendermime/style/base.css
+++ b/packages/rendermime/style/base.css
@@ -22,7 +22,6 @@
   border: none;
   margin: 0px;
   padding: 0px;
-  line-height: normal;
 }
 
 .jp-RenderedText pre a:link {
